[metadata]
name = chatchess
version = 1.0.1
author = Mate Tohai
author_email = admin@tmate6.com
description = A package to play chess with ChatGPT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tmate6/ChatChess
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True